src/objects/RWE_Study__c.object
<CustomObject>
    <description>It is used to group RWE Data Assets for common quality of study</description>
    <fields>
        <fullName>Count_Study_Link__c</fullName>
        <label>Count Study Link</label>
        <summaryForeignKey>Junction_Data_Asset_Study__c.RWE_Study__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global [Multiple Regions]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Research_Trials__c</fullName>
        <label>Research Trials</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is a study start date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study_Description__c</fullName>
        <label>Study Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RWE Studies</relationshipLabel>
        <relationshipName>RWE_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Pick__c</fullName>
        <label>Study Pick</label>
        <picklist>
            <picklistValues>
                <fullName>Utilized</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Produced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Status__c</fullName>
        <label>Study Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Type__c</fullName>
        <label>Study Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meta-Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observational Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatic Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systematic Literature Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardio Metabolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology and Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell and Gene Therapy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RWE Study</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RWE Study Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>